--- a/spring-android-core-test/pom.xml
+++ b/spring-android-core-test/pom.xml
@@ -14,12 +14,12 @@
     </organization>
 
     <properties>
-        <android-platform>7</android-platform>
-        <android-maven-plugin-version>3.0.0-alpha-14</android-maven-plugin-version>
+        <android-platform>15</android-platform>
+        <android-maven-plugin-version>3.0.2</android-maven-plugin-version>
         <maven-compiler-plugin-version>2.3.2</maven-compiler-plugin-version>
         <java-version>1.6</java-version>
-        <android-version>2.1_r1</android-version>
-        <!-- Available Android versions: 1.5_r3, 1.5_r4, 1.6_r2, 2.1.2, 2.1_r1, 2.2.1, 2.3.1, 2.3.3 -->
+        <android-version>4.0.1.2</android-version>
+        <!-- Available Android versions: 1.5_r3, 1.5_r4, 1.6_r2, 2.1.2, 2.1_r1, 2.2.1, 2.3.1, 2.3.3, 4.0.1.2 -->
         <spring-android-version>1.0.0.BUILD-SNAPSHOT</spring-android-version>
         <easymock-version>2.5.2</easymock-version>
     </properties>
@@ -76,6 +76,35 @@
                 </configuration>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+                <plugin>
+                    <groupId>org.eclipse.m2e</groupId>
+                    <artifactId>lifecycle-mapping</artifactId>
+                    <version>1.0.0</version>
+                    <configuration>
+                        <lifecycleMappingMetadata>
+                            <pluginExecutions>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+                                        <artifactId>android-maven-plugin</artifactId>
+                                        <versionRange>[3.0.2,)</versionRange>
+                                        <goals>
+                                            <goal>proguard</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore></ignore>
+                                    </action>
+                                </pluginExecution>
+                            </pluginExecutions>
+                        </lifecycleMappingMetadata>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
     <repositories>
