--- a/spring-android-rest-template-test/pom.xml
+++ b/spring-android-rest-template-test/pom.xml
@@ -14,12 +14,12 @@
     </organization>
 
     <properties>
-        <android-platform>7</android-platform>
+        <android-platform>15</android-platform>
         <android-maven-plugin-version>3.0.2</android-maven-plugin-version>
         <maven-compiler-plugin-version>2.3.2</maven-compiler-plugin-version>
         <java-version>1.6</java-version>
         <android-version>4.0.1.2</android-version>
-        <!-- Available Android versions: 1.5_r3, 1.5_r4, 1.6_r2, 2.1.2, 2.1_r1, 2.2.1, 2.3.1, 2.3.3 -->
+        <!-- Available Android versions: 1.5_r3, 1.5_r4, 1.6_r2, 2.1.2, 2.1_r1, 2.2.1, 2.3.1, 2.3.3, 4.0.1.2 -->
         <spring-android-version>1.0.0.BUILD-SNAPSHOT</spring-android-version>
         <gson-version>2.0</gson-version>
         <jackson-version>1.9.2</jackson-version>
