--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ import org.springframework.build.Version
 // -----------------------------------------------------------------------------
 // Configuration for the root project
 // -----------------------------------------------------------------------------
-description = 'Spring Android'
+description = 'Spring for Android'
 abbreviation = 'ANDROID'
 
 apply plugin: 'base'
@@ -133,7 +133,7 @@ configure(javaprojects) {
 // @see configure(javaprojects) above for general config
 // -----------------------------------------------------------------------------
 project('spring-android-core') {
-    description = "Spring Android Core"
+    description = "Spring for Android Core"
 
     dependencies {
         compile ("com.google.android:android:$androidVersion") { 
@@ -143,7 +143,7 @@ project('spring-android-core') {
 }
 
 project('spring-android-auth') {
-    description = 'Spring Android Auth'
+    description = 'Spring for Android Auth'
     
     dependencies {
         compile ("com.google.android:android:$androidVersion") { 
@@ -162,7 +162,7 @@ project('spring-android-auth') {
 }
 
 project('spring-android-rest-template') {
-    description = 'Spring Android Rest Template'
+    description = 'Spring for Android Rest Template'
 
     repositories {
         mavenRepo urls: 'https://android-rome-feed-reader.googlecode.com/svn/maven2/releases'
