--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,12 @@
 	</modules>
 	
 	<properties>
-		<android-platform>15</android-platform>
+		<android-platform>16</android-platform>
 		<android-maven-plugin-version>3.2.0</android-maven-plugin-version>
 		<maven-compiler-plugin-version>2.3.2</maven-compiler-plugin-version>
 		<java-version>1.6</java-version>
-		<com.google.android-version>4.0.1.2</com.google.android-version>
-		<!-- Available Android versions: 1.5_r3, 1.5_r4, 1.6_r2, 2.1.2, 2.1_r1, 2.2.1, 2.3.1, 2.3.3, 4.0.1.2 -->
+		<com.google.android-version>4.1.1.4</com.google.android-version>
+		<!-- Available Android versions: 1.5_r3, 1.5_r4, 1.6_r2, 2.1.2, 2.1_r1, 2.2.1, 2.3.1, 2.3.3, 4.0.1.2, 4.1.1.4 -->
 		<org.springframework.android-version>1.0.0.BUILD-SNAPSHOT</org.springframework.android-version>
 		<org.easymock-version>2.5.2</org.easymock-version>
 	</properties>
