--- a/pom.xml
+++ b/pom.xml
@@ -12,16 +12,16 @@
 		<name>SpringSource</name>
 		<url>http://www.springsource.org</url>
 	</organization>
-	
+
 	<modules>
 		<module>/spring-android-core-test</module>
 		<module>/spring-android-rest-template-test</module>
 		<module>/spring-android-auth-test</module>
 	</modules>
-	
+
 	<properties>
 		<android-platform>16</android-platform>
-		<android-maven-plugin-version>3.2.0</android-maven-plugin-version>
+		<android-maven-plugin-version>3.3.2</android-maven-plugin-version>
 		<maven-compiler-plugin-version>2.3.2</maven-compiler-plugin-version>
 		<java-version>1.6</java-version>
 		<com.google.android-version>4.1.1.4</com.google.android-version>
@@ -29,7 +29,7 @@
 		<org.springframework.android-version>1.0.0.BUILD-SNAPSHOT</org.springframework.android-version>
 		<org.easymock-version>2.5.2</org.easymock-version>
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>com.google.android</groupId>
@@ -51,7 +51,7 @@
 		</dependency>
 	</dependencies>
 
-	
+
 	<repositories>
 		<repository>
 			<id>spring-snapshot</id>
@@ -85,36 +85,14 @@
 					<target>${java-version}</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<testFailureIgnore>true</testFailureIgnore>
+				</configuration>
+			</plugin>
 		</plugins>
-		<pluginManagement>
-			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>com.jayway.maven.plugins.android.generation2</groupId>
-										<artifactId>android-maven-plugin</artifactId>
-										<versionRange>[3.0.2,)</versionRange>
-										<goals>
-											<goal>proguard</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 	</build>
 
 </project>
